FIX (code) AA colour contrast

--- a/src/patterns/code/_code.scss
+++ b/src/patterns/code/_code.scss
@@ -21,6 +21,7 @@ code {
 /* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
 /* Original theme - https://github.com/chriskempson/tomorrow-theme */
 /* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
+/* Changed to meet WCAG 2.1 AA standards */
 
 /* Tomorrow Comment */
 .hljs-comment,
@@ -37,7 +38,7 @@ code {
 .hljs-selector-class,
 .hljs-regexp,
 .hljs-deletion {
-  color: #cc6666;
+  color: #cd6a6a;
 }
 
 /* Tomorrow Orange */
